app/assets/stylesheets/components/_card.scss
.mkflr_card {
  margin-top: 16px;
  margin-bottom: 8px;
  -webkit-box-shadow: 2px 2px 1px 1px rgba(35,9,3,0.1);
  -moz-box-shadow: 2px 2px 1px 1px rgba(35,9,3,0.1);
  box-shadow: 2px 2px 1px 1px rgba(35,9,3,0.1);
  border-radius: 2px;
}

.mkflr_product_pic{
  img {
  background-size: fit;
  max-width:100%;
  max-height:100%;
  width: auto;
  background-position: center;
  background-color: $my_white;
  padding: 8px 0px;
  }
}

.mkflr_card_infos {
  height: 20vh;
}

.mkflr_card_colour {
  height: 10vh;
}

.mkflr_card_price {
  position: absolute;
  right: 10px;
  top: 10px;
  width: 54px;
  height: 54px;
  border-radius: 50%;
  background-color:$zin_brown;
  color: $my_white;
  font-family: 'Open Sans Condensed', sans-serif;
  font-weight: 600;

  p {
    margin: 0px;
    font-size: 15px;
    text-align: center;
  }
}

.mkflr_quantity {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  background-color:$zin_brown;
  color: $my_white;
  font-family: 'Caveat', cursive;
  font-weight: 500;
}

.mkflr_quickbuy_heading {
  color: $my_white;
  font-family: 'Montserrat', sans-serif;
  font-weight: 500;
  background-color: $zin_brown;
  padding: 8px 8px;
  margin: 16px 16px;
  text-align: center;
  height: 8vh;
  border-radius: 2px;
}

.mkflr_buy_controls {
  margin: 16px;
  margin-top: 0px;
}

.mkflr_add_to_cart_light {
  padding: 8px;
  border: 1px solid $zin_brown;
}

.mkflr_radios_incre {
  border: 1px solid $zin_brown;
  border-left: 0px;
  flex-grow: 1;
  margin-right:16px;
  padding: 0px !important;
  font-size: 16px;
  a {
    padding: 8px;
    text-decoration: none;
    color: $zin_brown;
  }
  a:visited {
    text-decoration: none;
  }
}

.mkflr_radios_decre {
  border: 1px solid $zin_brown;
  border-right: 0px;
  flex-grow: 1;
  padding: 0px !important;
    a {
    padding: 8px;
    text-decoration: none;
    color: $zin_brown;
  }
  a:visited {
    text-decoration: none;
  }
}

